feat(user-profile): user can view/update profile
- add new fields to the existing ones to get more information from the
  user after signup
- create validations for each field so that each field can be independent
  of each other
- add more fields tothe user model- add more fields tothe user model
- create route for user to be able to update profile using patch request
  method
- create route for user to be able to view profile before or after update
  using the get method.
- write test for each both endpoints to make sure most of the real cases
  is covered

[Delivers #167749956]
