# src/controllers/UserController.js
@@ -1,8 +1,8 @@
 import UserService from '../services/UserService';
-import Responses from '../utils/Responses';
 import Helper from '../utils/Helper';
 import sendEmail from '../utils/mailer';
 import transporter from '../utils/transporter';
+import Responses from '../utils/Responses';
 
 /**
  * @class
@@ -65,7 +65,6 @@ export default class UserController {
   /**
    * @method
    * @description Implements password reset endpoint
-   * @description Email verification endpoint
    * @static
    * @param {object} req - Request object
    * @param {object} res - Response object
@@ -88,6 +87,8 @@ export default class UserController {
   /**
    * @method
    * @description Implements update password controller
+   * @method updateUserProfile
+   * @description Implements userprofile settings endpoint
    * @static
    * @param {object} req - Request object
    * @param {object} res - Response object
@@ -121,15 +122,66 @@ export default class UserController {
     return Responses.send(res);
   }
 
+  /** 
+   * @method updateUserProfile
+   * @description Implements userprofile settings endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */ 
+  static updateUserProfile(req, res) {
+    const { body, user, params } = req;
+    if (user.email !== params.email){
+      Responses.setError(401, 'You are not allowed to edit this profile');
+      return Responses.send(res);
+    }
+    UserService.updateUserProfile(body, user.id, params.email)
+      .then(updateUserProfile => {
+        console.log(updateUserProfile)
+        delete updateUserProfile[0].dataValues.password;
+        Responses.setSuccess(201, 'user account updated successfully', updateUserProfile[0]);
+        return Responses.send(res);
+      }).catch(() => {
+          Responses.setError(500, 'database error');
+          return Responses.send(res);
+      });
+  }
+
   /**
-   * @method
-   * @description Email verification endpoint
+   * @method retrieveUserProfile
+   * @description Implements userprofile settings endpoint
    * @static
    * @param {object} req - Request object
    * @param {object} res - Response object
    * @returns {object} JSON response
    * @memberof UserController
    */
+  static retrieveUserProfile(req, res) {
+    const {user, params} = req;
+    if (user.email !== params.email){
+      Responses.setError(401, 'You are not allowed to see this profile');
+      return Responses.send(res);
+    }
+    UserService.retrieveUser(user.id, params.email)
+      .then(retrieveUser => {
+        delete retrieveUser.dataValues.password;
+        Responses.setSuccess(200, 'user account retrieved successfully', retrieveUser);
+        return Responses.send(res);
+      }).catch(() => {
+          Responses.setError(500, 'database error');
+          return Responses.send(res);
+      });
+  }
+ /**
+   * @method
+   * @description Email verification endpoint
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+  **/
   static async verifyUserEmail(req, res) {
     const { token } = req.params;
     const { id, email } = Helper.verifyToken(token);
